src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__error_empty_generic_params.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [],
                        span: Span {
                            start: 4,
                            end: 6,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                ),
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 9,
                            end: 11,
                            start_line: 1,
                            start_col: 10,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 11,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 11,
        start_line: 1,
        start_col: 1,
    },
}
